# jellygrab

./: .dockerignore  .env.example  .gitignore  .gitlint  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  init.md  install-plugin.sh  pyproject.toml  release-please-config.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: actionlint.yml  build-plugin.yml  ci-gate.yml  codeql.yml  python-ci.yml  release-please.yml  release-plugin.yml  release-sidecar.yml  update-release-manifest.yml
docs/: plan.md  scrapers.md
docs/superpowers/plans/: 2026-04-29-public-release.md
docs/superpowers/specs/: 2026-04-29-public-release-design.md
jellyfin-plugin/: InjectScriptService.cs  JellyGrabController.cs  JellyNamaController.cs  Jellyfin.Plugin.JellyGrab.csproj  Jellyfin.Plugin.JellyNama.csproj  Plugin.cs  PluginServiceRegistrator.cs  README.md  build.yaml  manifest.json
jellyfin-plugin/Configuration/: PluginConfiguration.cs  configPage.html
jellyfin-plugin/Web/: inject.js  jellygrab.html  jellygrab.js  jellynama.html  jellynama.js
scripts/: package-plugin.sh
sidecar/: Dockerfile  config.py  downloader.py  flaresolverr_client.py  jellyfin_client.py  job_queue.py  keepalive.py  main.py  scraper.py  session_state.py  version.py
sidecar/scrapers/: __init__.py
sidecar/scrapers/nama/: __init__.py  flaresolverr.py  scraper.py  session.py
sidecar/tests/: test_api_errors.py  test_scraper_parsing.py
