[project]
name = "jellynama"
version = "0.1.0"
description = "Jellyfin companion sidecar for searching and downloading from 30nama.com"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "curl-cffi>=0.7",
    "playwright>=1.48",
    "beautifulsoup4>=4.12",
    "lxml>=5.3",
    "pydantic>=2.9",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 110
target-version = "py312"
