[project]
name = "jellygrab"
version = "0.1.0"
description = "JellyGrab — a Jellyfin downloader sidecar with pluggable scrapers (30nama scraper bundled)."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "curl-cffi>=0.7",
    "beautifulsoup4>=4.12",
    "lxml>=5.3",
    "pydantic>=2.9",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 110
target-version = "py312"
