[project]
name = "jellygrab"
version = "0.1.0"
description = "JellyGrab — a Jellyfin downloader sidecar with pluggable scrapers (30nama scraper bundled)."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "curl-cffi>=0.7",
    "beautifulsoup4>=4.12",
    "lxml>=5.3",
    "pydantic>=2.9",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
# scraper.py configures its module-level logger before importing the heavy
# curl_cffi / flaresolverr modules so that any logging triggered by their
# import-time work goes through our formatter. Keep the existing layout
# rather than churn it for E402/E741.
"sidecar/scrapers/nama/scraper.py" = ["E402", "E741"]

[tool.pytest.ini_options]
testpaths = ["sidecar/tests"]
pythonpath = ["sidecar"]
asyncio_mode = "auto"
